--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.104.1
+fastapi>=0.110
 uvicorn[standard]==0.24.0
 yt-dlp==2023.12.30
 python-multipart==0.0.6
-pydantic==1.10.13
+pydantic>=2.6
